# WE-EV-CAN-Dashboard

./: .gitignore  CANBUS.md  Makefile  README.md  architecture.md  canbus-handler.service  canbus-reader.service  canbus-ui.service  config-dev.yaml  config.yaml  docker-compose.yaml  go.mod  go.sum  log-analysis  project_structure.md  start-ui-dev.sh  start-ui.sh
cmd/handler/: decoder.go  json_writer.go  main.go
cmd/reader/: main.go
cmd/replay/: main.go
cmd/tools/log-analysis/: log-analysis.go
cmd/tools/raw-analysis/: raw-analysis.go
cmd/tools/raw-convert/: raw-convert.go
cmd/ui/: main.go
cmd/ui/static/: dashboard.css  index.html
config/bms/: 1.o2bms  2.o2bms  NEW.o2bms  UpdatedProfile.o2bms
data/: Orion_CANBUS.dbc  big.json  big.raw  cell_data.json  ev_data.json  main_data.json  out.json  small.raw  state.json
docs/: VECAN_2.0.16_DI.dbc  ZeroEvDBC(onlyBMS&DU).dbc  hardware.MD  linux-can.md  project_structure.md
logger/: README.md  bms_data.json  can_dump_to_csv.py  can_frames.csv  can_parser.py  cell_voltage_poller.py  dump.txt  handlers.py  logger.py  logger2.py  obd.py  pyproject.toml  send_and_listen.py  test_output.json
logger/data/: 0x1806E5F4.json  0x1806E7F4.json  0x1806E9F4.json  0x18FF50E5.json  0x6B0.json  0x6B1.json  0x6B2.json  bms_data.json
logs/: canbus.json
logs/candump1/: can0.asc  can0.txt
logs/candump2/: can0.asc
logs/candump3/: canlog.txt  to_pycan.py
logs/pcan/: canbus.json  candump-2025-11-22_161709.trc  readme.md  to_pcan.py
sample/: log_stat.py
web/: bms_data.json  dashboard.html  pyproject.toml  web_app.py
